--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css"/>
     <title>Random Choice Picker</title>
 </head>
@@ -15,6 +16,11 @@
         <div id="tags"></div>
     </div>
 
+    <div>
+        <a href="https://github.com/tranthaituananh"><i class="fa fa-github"></i></a>
+        <a href="https://www.instagram.com/ta.2705__/"><i class="fa fa-instagram"></i></a>
+    </div>
+    
     <script src="script.js"></script>
 </body>
 </html>
